[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"
egui = "0.29.1"
egui_extras = {version="0.29.1",features = ["all_loaders"]}
image = { version = "0.25", features = ["jpeg", "png"] }
rusqlite = "0.32.1"

chrono = "0.4.38"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
